# solved.py

./: .gitignore  LICENSE  main.py  pyproject.toml  setup.py
solvedac/: __init__.py  requirements.txt  session.py  solved_types.py
solvedac/endpoints/: __init__.py  background.py  badge.py  coins.py  problem.py  search.py  site.py  user.py
solvedac/schemes/: Background.py  BackgroundAuthor.py  BackgroundCategory.py  BackgroundCoinShop.py  ClassInfo.py  CoinShopProduct.py  Color.py  CountedArray.py  Emoticon.py  Grass.py  GrassTheme.py  GrassTopic.py  History.py  Item.py  LevelInfo.py  SiteStats.py  SortCriteria.py  SproutInfo.py  __init__.py
solvedac/schemes/badge/: Badge.py  BadgeCategory.py  BadgeTier.py  __init__.py
solvedac/schemes/problem/: Problem.py  ProblemLevel.py  ProblemTag.py  ProblemTagAlias.py  ProblemTagNameTranslated.py  ProblemTitleTranslated.py  __init__.py
solvedac/schemes/suggestion/: AutoComplete.py  BriefProblem.py  BriefProblemTag.py  Suggestion.py  __init__.py
solvedac/schemes/user/: AdditionalInfo.py  ArenaTier.py  ClassDecoration.py  ClassStats.py  Gender.py  Organization.py  OrganizationType.py  ProblemStats.py  SocialUser.py  SolveTier.py  TagRating.py  TagStats.py  User.py  __init__.py
